# Interval_Timer_Rust

./: Cargo.toml  Interval Timer Rust - To Do.txt  README.md  ReadMe.txt
interval_timer/: Cargo.toml
interval_timer/src/: main.rs  resource.rc  settings.json
interval_timer/src/interval_timer/: Cargo.toml
