[package]
name = "interval_timer"
version = "1.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
rodio = "0.20.1"
image = "0.25.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
winit = "0.30.9"
embed-resource = "3.0.2"
lazy_static = "1.5.0"

[build-dependencies]
winres = "0.1.12"

[[bin]]
name = "interval_timer"
path = "interval_timer/src/main.rs"