[package]
name = "interval_timer"
version = "1.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
rodio = "0.20.1"
image = "0.25.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
winit = "0.30.9"
winres = "0.1.12"


[[bin]]
name = "interval_timer"
path = "src/main.rs"